[gd_scene load_steps=17 format=2]

[ext_resource path="res://Asset/HallBackground.png" type="Texture" id=1]
[ext_resource path="res://Asset/Button/RoomControl/CreateRoom.png" type="Texture" id=2]
[ext_resource path="res://Asset/Button/RoomControl/EnterRoom.png" type="Texture" id=3]
[ext_resource path="res://Hall.gd" type="Script" id=4]
[ext_resource path="res://Asset/Button/General/Confirm.png" type="Texture" id=5]
[ext_resource path="res://Asset/Button/General/Cancel.png" type="Texture" id=6]
[ext_resource path="res://Asset/PopupBackground.png" type="Texture" id=7]
[ext_resource path="res://Asset/Font/SourceHanSansSC-Normal.otf" type="DynamicFontData" id=8]
[ext_resource path="res://Asset/Input/InputShort.png" type="Texture" id=9]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 640, 569 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 257, 59 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 257, 59 )

[sub_resource type="DynamicFont" id=4]
size = 32
extra_spacing_char = 5
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 8 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="HBoxContainer" parent="."]
margin_left = 621.264
margin_top = 859.261
margin_right = 1417.26
margin_bottom = 1018.26
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateRoomButton" type="TextureButton" parent="ButtonContainer"]
margin_right = 383.0
margin_bottom = 159.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterRoomButton" type="TextureButton" parent="ButtonContainer"]
margin_left = 423.0
margin_right = 806.0
margin_bottom = 159.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateRoomDialog" type="PopupPanel" parent="."]
margin_right = 48.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 1 )
popup_exclusive = true

[node name="TextureRect" type="TextureRect" parent="CreateRoomDialog"]
visible = false
margin_right = 640.0
margin_bottom = 569.0
texture = ExtResource( 7 )

[node name="VoxContainer" type="VBoxContainer" parent="CreateRoomDialog"]
margin_right = 640.0
margin_bottom = 569.0
custom_constants/separation = 50
alignment = 1

[node name="PasswdContainer" type="HBoxContainer" parent="CreateRoomDialog/VoxContainer"]
margin_top = 198.0
margin_right = 744.0
margin_bottom = 246.0
custom_constants/separation = 20
alignment = 1

[node name="PasswordLabel" type="Label" parent="CreateRoomDialog/VoxContainer/PasswdContainer"]
margin_left = 154.0
margin_right = 282.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "房间密码"

[node name="PasswordEdit" type="LineEdit" parent="CreateRoomDialog/VoxContainer/PasswdContainer"]
margin_left = 302.0
margin_right = 590.0
margin_bottom = 48.0
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
max_length = 6
expand_to_text_length = true
clear_button_enabled = true

[node name="ButtonContainer" type="HBoxContainer" parent="CreateRoomDialog/VoxContainer"]
margin_top = 296.0
margin_right = 744.0
margin_bottom = 371.0
custom_constants/separation = 20
alignment = 1

[node name="ConfirmButton" type="TextureButton" parent="CreateRoomDialog/VoxContainer/ButtonContainer"]
margin_left = 141.0
margin_right = 362.0
margin_bottom = 75.0
texture_normal = ExtResource( 5 )

[node name="CancelButton" type="TextureButton" parent="CreateRoomDialog/VoxContainer/ButtonContainer"]
margin_left = 382.0
margin_right = 603.0
margin_bottom = 75.0
texture_normal = ExtResource( 6 )

[node name="JoinRoomDialog" type="PopupPanel" parent="."]
visible = true
margin_right = 48.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 1 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="JoinRoomDialog"]
visible = false
margin_right = 640.0
margin_bottom = 569.0
texture = ExtResource( 7 )

[node name="VoxContainer" type="VBoxContainer" parent="JoinRoomDialog"]
margin_right = 640.0
margin_bottom = 569.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomIDContainer" type="HBoxContainer" parent="JoinRoomDialog/VoxContainer"]
margin_top = 179.0
margin_right = 688.0
margin_bottom = 227.0
alignment = 1

[node name="RoomIDLabel" type="Label" parent="JoinRoomDialog/VoxContainer/RoomIDContainer"]
margin_left = 148.0
margin_right = 244.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "房间号"

[node name="RoomIDEdit" type="LineEdit" parent="JoinRoomDialog/VoxContainer/RoomIDContainer"]
margin_left = 252.0
margin_right = 540.0
margin_bottom = 48.0
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
max_length = 6
expand_to_text_length = true
clear_button_enabled = true
caret_blink = true

[node name="PasswdContainer" type="HBoxContainer" parent="JoinRoomDialog/VoxContainer"]
margin_top = 247.0
margin_right = 688.0
margin_bottom = 295.0
alignment = 1

[node name="PasswordLabel" type="Label" parent="JoinRoomDialog/VoxContainer/PasswdContainer"]
margin_left = 160.0
margin_right = 231.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "密 码"

[node name="PasswordEdit" type="LineEdit" parent="JoinRoomDialog/VoxContainer/PasswdContainer"]
margin_left = 239.0
margin_right = 527.0
margin_bottom = 48.0
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
max_length = 6
expand_to_text_length = true
context_menu_enabled = false
clear_button_enabled = true
caret_blink = true

[node name="ButtonContainer" type="HBoxContainer" parent="JoinRoomDialog/VoxContainer"]
margin_top = 315.0
margin_right = 688.0
margin_bottom = 390.0
custom_constants/separation = 20
alignment = 1

[node name="ConfirmButton" type="TextureButton" parent="JoinRoomDialog/VoxContainer/ButtonContainer"]
margin_left = 113.0
margin_right = 334.0
margin_bottom = 75.0
texture_normal = ExtResource( 5 )

[node name="CancelButton" type="TextureButton" parent="JoinRoomDialog/VoxContainer/ButtonContainer"]
margin_left = 354.0
margin_right = 575.0
margin_bottom = 75.0
texture_normal = ExtResource( 6 )

[node name="CreateRoomRequest" type="HTTPRequest" parent="."]

[node name="JoinRoomRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="ButtonContainer/CreateRoomButton" to="." method="_on_CreateRoomButton_pressed"]
[connection signal="pressed" from="ButtonContainer/EnterRoomButton" to="." method="_on_EnterRoomButton_pressed"]
[connection signal="pressed" from="CreateRoomDialog/VoxContainer/ButtonContainer/ConfirmButton" to="." method="_on_CreateRoom_ConfirmButton_pressed"]
[connection signal="pressed" from="CreateRoomDialog/VoxContainer/ButtonContainer/CancelButton" to="." method="_on_CreateRoom_CancelButton_pressed"]
[connection signal="pressed" from="JoinRoomDialog/VoxContainer/ButtonContainer/ConfirmButton" to="." method="_on_JoinRoom_ConfirmButton_pressed"]
[connection signal="pressed" from="JoinRoomDialog/VoxContainer/ButtonContainer/CancelButton" to="." method="_on_JoinRoom_CancelButton_pressed"]
